# Bundlr-Task

./: Cargo.toml  README.md  Result.txt  file.json
src/: main.rs
