[package]
name = "ardownloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3"
walkdir ="2"
file-size = "1"
thiserror = "1"
api = "0.2.0"   
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
downloader = "0.2.6"